--- a/src/styles/title.module.css
+++ b/src/styles/title.module.css
@@ -1,122 +1,88 @@
 .container {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 40%;
-  left: 50%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 40%;
+	left: 50%;
 }
 
 .scanlines {
-  overflow: hidden;
-  mix-blend-mode: difference;
-  z-index: 0;
-  background-color: #232323;
+	overflow: hidden;
+	mix-blend-mode: difference;
+	z-index: 0;
+	background-color: #232323;
 }
 
 .scanlines::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 
-  background: repeating-linear-gradient(
-    to bottom,
-    transparent 0%,
-    rgba(255, 255, 255, 0.05) 0.5%,
-    transparent 1%
-  );
+	background: repeating-linear-gradient(to bottom, transparent 0%, rgba(255, 255, 255, 0.05) 0.5%, transparent 1%);
 
-  animation: fudge 7s ease-in-out alternate infinite;
+	animation: fudge 7s ease-in-out alternate infinite;
 }
 
 @keyframes fudge {
-  from {
-    transform: translate(0px, 0px);
-  }
-  to {
-    transform: translate(0px, 2%);
-  }
-}
-
-.glow {
-  @extend .glitch;
-  text-shadow: 0 0 1000px rgb(223, 191, 191);
-  color: transparent;
-  position: absolute;
-  top: 0;
-}
-
-.subtitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 100;
-  font-size: 0.8vw;
-  color: rgba(165, 141, 141, 0.4);
-  text-transform: uppercase;
-  letter-spacing: 1em;
-  text-align: center;
-  position: absolute;
-  left: 17%;
-  animation: glitch-2 5s 5.02s infinite;
+	from {
+		transform: translate(0px, 0px);
+	}
+	to {
+		transform: translate(0px, 2%);
+	}
 }
 
 @keyframes glitch-2 {
-  1% {
-    transform: rotateX(10deg) skewX(70deg);
-  }
-  2% {
-    transform: rotateX(0deg) skewX(0deg);
-  }
+	1% {
+		transform: rotateX(10deg) skewX(70deg);
+	}
+	2% {
+		transform: rotateX(0deg) skewX(0deg);
+	}
 }
 
 @media (max-width: 600px) {
-  .glitch {
-    font-size: 1rem;
-  }
+	.glitch {
+		font-size: 1rem;
+	}
 }
 
 .glitch {
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-  font: Roboto;
-  font-weight: normal;
-  margin-bottom: 2rem;
-  text-transform: uppercase;
-  width: 80%;
-  position: relative;
-  text-shadow: 0.05em 0 0 #afafaf, -0.03em -0.04em 0 #afafaf,
-    0.025em 0.04em 0 #afafaf;
-  animation: glitch 1000ms infinite;
+	font-size: 2rem;
+	font-weight: bold;
+	text-align: center;
+	font: Roboto;
+	font-weight: normal;
+	margin-bottom: 2rem;
+	text-transform: uppercase;
+	width: 80%;
+	position: relative;
+	text-shadow: 0.05em 0 0 #afafaf, -0.03em -0.04em 0 #afafaf, 0.025em 0.04em 0 #afafaf;
+	animation: glitch 1000ms infinite;
 }
 
 @keyframes glitch {
-  0% {
-    text-shadow: 0.05em 0 0 #afafaf, -0.03em -0.04em 0 #afafaf,
-      0.025em 0.04em 0 #afafaf;
-  }
-  15% {
-    text-shadow: 0.05em 0 0 #afafaf, -0.03em -0.04em 0 #afafaf,
-      0.025em 0.04em 0 #afafaf;
-  }
-  16% {
-    text-shadow: -0.05em -0.025em 0 #afafaf, 0.025em 0.035em 0 #afafaf,
-      -0.05em -0.05em 0 #afafaf;
-  }
-  49% {
-    text-shadow: -0.05em -0.025em 0 #afafaf, 0.025em 0.035em 0 #afafaf,
-      -0.05em -0.05em 0 #afafaf;
-  }
-  50% {
-    text-shadow: 0.05em 0.035em 0 #afafaf, 0.03em 0 0 #afafaf,
-      0 -0.04em 0 #afafaf;
-  }
-  99% {
-    text-shadow: 0.05em 0.035em 0 #afafaf, 0.03em 0 0 #afafaf,
-      0 -0.04em 0 #afafaf;
-  }
-  100% {
-    text-shadow: -0.05em 0 0 #afafaf, -0.025em -0.04em 0 #afafaf,
-      -0.04em -0.025em 0 #afafaf;
-  }
+	0% {
+		text-shadow: 0.05em 0 0 #afafaf, -0.03em -0.04em 0 #afafaf, 0.025em 0.04em 0 #afafaf;
+	}
+	15% {
+		text-shadow: 0.05em 0 0 #afafaf, -0.03em -0.04em 0 #afafaf, 0.025em 0.04em 0 #afafaf;
+	}
+	16% {
+		text-shadow: -0.05em -0.025em 0 #afafaf, 0.025em 0.035em 0 #afafaf, -0.05em -0.05em 0 #afafaf;
+	}
+	49% {
+		text-shadow: -0.05em -0.025em 0 #afafaf, 0.025em 0.035em 0 #afafaf, -0.05em -0.05em 0 #afafaf;
+	}
+	50% {
+		text-shadow: 0.05em 0.035em 0 #afafaf, 0.03em 0 0 #afafaf, 0 -0.04em 0 #afafaf;
+	}
+	99% {
+		text-shadow: 0.05em 0.035em 0 #afafaf, 0.03em 0 0 #afafaf, 0 -0.04em 0 #afafaf;
+	}
+	100% {
+		text-shadow: -0.05em 0 0 #afafaf, -0.025em -0.04em 0 #afafaf, -0.04em -0.025em 0 #afafaf;
+	}
 }
