--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,24 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.typing {
-	width: 22ch;
-	animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
-	white-space: nowrap;
-	overflow: hidden;
-	border-right: 3px solid;
-	font-family: monospace;
-	font-size: 2em;
-}
-
-@keyframes typing {
-	from {
-		width: 0;
-	}
-}
-
-@keyframes blink {
-	50% {
-		border-color: transparent;
-	}
+::-webkit-scrollbar {
+	width: 0;
+	height: 0;
 }
